added air and crud operations for users
